--- a/.gitconfig
+++ b/.gitconfig
@@ -23,6 +23,16 @@
 	credit = "!f() { git commit --amend --author \"$1 <$2>\" -C HEAD; }; f"
 	# Interactive rebase with the given number of latest commits
 	reb = "!r() { git rebase -i HEAD~$1; }; r"
+	
+	# Eason added for self use.
+	#git checkout alias
+	co = checkout
+	#git branch alias
+	br = branch
+	#git commit alias
+	ci = commit
+	#git status alias
+	st = status
 
 [apply]
 	# Detect whitespace errors when applying a patch
@@ -71,3 +81,7 @@
 
 [push]
 	default = matching
+
+[user]  
+        name = Eason Outlook
+        email = easonoutlook@gmail.com 
