--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,24 @@ CVS
 
 # twistd pid files
 twistd.pid
+
+
+#Eason add for iOS project ignore files
+# Xcode
+.DS_Store
+build/
+*.pbxuser
+!default.pbxuser
+*.mode1v3
+!default.mode1v3
+*.mode2v3
+!default.mode2v3
+*.perspectivev3
+!default.perspectivev3
+*.xcworkspace
+!default.xcworkspace
+xcuserdata
+profile
+*.moved-aside
+DerivedData
+.idea/
